# stoiquent

./: .gitignore  README.md  pyproject.toml  stoiquent.toml
.github/workflows/: ci.yml
docs/: design.md  playwright-e2e-protocol.md  requirements.md
skills/hello-world/: SKILL.md
skills/hello-world/scripts/: greet.py
stoiquent/: __main__.py  app.py  cli.py  config.py  models.py  persistence.py  projects.py
stoiquent/agent/: context.py  loop.py  session.py  tool_dispatch.py
stoiquent/llm/: openai_compat.py  provider.py  reasoning.py
stoiquent/sandbox/: apple.py  base.py  detect.py  models.py  noop.py  oci.py  policy.py
stoiquent/skills/: active_store.py  catalog.py  controller.py  discovery.py  executor.py  mcp_app.py  mcp_bridge.py  mcp_server.py  models.py  parser.py
stoiquent/ui/: chat.py  layout.py  sidebar.py  skills_header.py  skills_manager.py  theme.py  tool_card.py
tests/: conftest.py  nicegui_main.py  test_config.py  test_context.py  test_models.py  test_openai_compat.py  test_reasoning.py
tests/e2e/: serve_for_playwright.py  test_app_renders.py  test_full_system.py  test_ui_interaction.py
tests/fixtures/mcp_servers/: echo_server.py
tests/fixtures/skills/hello-world/: SKILL.md
tests/integration/: conftest.py  test_agent_loop.py  test_apple_sandbox.py  test_cli.py  test_config.py  test_imports.py  test_llm_errors.py  test_mcp_bridge.py  test_mcp_server.py  test_oci_sandbox.py  test_persistence.py  test_skill_lifecycle.py  test_skill_toggle_mcp_lifecycle.py  test_tool_execution.py
tests/unit/stoiquent/: test_app.py  test_cli_run.py  test_config.py  test_models.py  test_persistence.py  test_projects.py
tests/unit/stoiquent/agent/: test_context.py  test_loop.py  test_session.py  test_tool_dispatch.py
tests/unit/stoiquent/llm/: test_openai_compat.py  test_openai_compat_stream.py  test_reasoning.py
tests/unit/stoiquent/sandbox/: test_apple.py  test_detect.py  test_models.py  test_noop.py  (+2 more)
(+17 files in other folders)
