[project]
name = "stoiquent"
version = "0.1.0"
description = "Local LLM agent desktop app with agentskills.io-compliant skills"
requires-python = ">=3.12"
license = "Apache-2.0"
dependencies = [
    "nicegui>=2.0",
    "httpx>=0.27",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "python-frontmatter>=1.1",
    "click>=8.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[project.scripts]
stoiquent = "stoiquent.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["integration: requires Ollama running locally"]
asyncio_mode = "auto"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
