[project]
name = "stoiquent"
version = "0.1.0"
description = "Local LLM agent desktop app with agentskills.io-compliant skills"
requires-python = ">=3.12"
license = "Apache-2.0"
dependencies = [
    "nicegui>=2.0",
    "httpx>=0.27",
    "pydantic>=2.0",
    "click>=8.0",
    "pyyaml>=6.0.3",
    "mcp>=1.0",
]

[project.scripts]
stoiquent = "stoiquent.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=7.1.0",
    "coverage>=7.13.5",
    "selenium>=4.0",
]

[tool.pytest.ini_options]
testpaths = ["tests/unit", "tests/integration", "tests/e2e"]
markers = ["integration: requires Ollama running locally"]
asyncio_mode = "auto"
asyncio_default_test_loop_scope = "session"
asyncio_default_fixture_loop_scope = "session"
main_file = "tests/nicegui_main.py"

[tool.coverage.run]
source = ["stoiquent"]
branch = true
relative_files = true

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.",
]

[tool.coverage.html]
directory = "htmlcov"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
